// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Touchable
  accessibilityComponentType="radiobutton_unchecked"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      Object {},
    ]
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    style={Object {}}
    type="text"
  >
    Bananas
  </Text>
</Touchable>
`;

exports[`renders correctly when checked 1`] = `
<Touchable
  accessibilityComponentType="radiobutton_checked"
  accessibilityTraits={
    Array [
      "button",
      "selected",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      Object {},
    ]
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    style={Object {}}
    type="text"
  >
    Bananas
  </Text>
  <Image
    source={1}
  />
</Touchable>
`;
